--- a/package.json
+++ b/package.json
@@ -10,7 +10,23 @@
   "license": "MIT",
   "dependencies": {
     "angular": "^1.5.8",
+    "babel-preset-es2015": "^6.18.0",
     "bootstrap": "^3.3.7",
-    "brainfuck-compiler": "^1.0.4"
+    "brainfuck-compiler": "^1.0.5"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-clean": "^0.3.2",
+    "gulp-concat-js": "^0.1.0",
+    "gulp-jshint": "^2.0.4",
+    "gulp-load-plugins": "^1.4.0",
+    "gulp-sourcemaps": "^2.2.0",
+    "gulp-uglifyjs": "^0.6.2",
+    "gulp-watch": "^4.3.11",
+    "gulp-wrap": "^0.13.0",
+    "jshint": "^2.9.4",
+    "jshint-stylish": "^2.2.1",
+    "run-sequence": "^1.2.2"
   }
 }
