--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "angular-ui-codemirror": "^0.3.0",
     "codemirror": "^5.19.0",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "angular-bootstrap": "^2.3.0"
   }
 }
